--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "hono": "^4.2.9",
     "prisma": "^5.13.0"
   },
