--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "@prisma/extension-accelerate": "^1.0.0",
+    "@sabdar/medium-common": "^1.0.1",
     "hono": "^4.2.9",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
