--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=""
+DATABASE_URL="postgres://avnadmin:AVNS_CkysqQXM6uIIPYzWmNB@pg-32e29f58-sabdarshaikh10-7054.c.aivencloud.com:15232/defaultdb?sslmode=require"
